--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,6 @@
-*{
+/*{
     box-sizing: border-box;
-}
+}*/
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -9,6 +9,27 @@ body {
     grid-template-rows: auto auto 1fr auto;
     margin: 0;
     min-height: 100vh;
+}
+
+.hero {
+    position: relative;
+}
+
+.hero img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.hero span {
+	position: absolute;
+    top: 40px;
+    right: 12%;
+    width: 40%;
+    text-align: center;
+    background: radial-gradient(#fff, #4d9efb);
+    border: 1px solid #000;
+    padding: 1rem;
 }
 
 #mode {
@@ -121,13 +142,17 @@ section {
     padding-right: 1rem;
 }
 
+#map {
+    width: 100%;
+    margin: 0 auto;
+    padding: 1rem;
+}
+
 footer {
     background: wheat;
     padding: 2rem;
     text-align: center;
     grid-column: 1 / 3;
-
-    position: absolute;
     bottom: 0;
     width: 100%;
 }
