--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -83,7 +83,7 @@ header h1 {
 }
 
 nav {
-    background-color: darkgoldenrod;
+    background-color: rgb(184, 134, 11);
     grid-column: 1 / 3;
 }
 .active {
@@ -93,25 +93,47 @@ nav {
 main {
     background-color: beige;
     grid-column: 1 / 3;
+    display: grid;
 }
-main h1 {
+main h2 {
     text-decoration: underline;
     text-align: center;
 }
 
-section {
-    margin: 0.5rem;
+.hero {
+    position: relative;
 }
 
+.hero img {
+    width: 80%;
+    height: auto;
+    display: block;
+}
+
+.hero button {
+	position: absolute;
+    top: 40px;
+    right: 12%;
+    width: 40%;
+    text-align: center;
+    background: radial-gradient(#fff, #4d9efb);
+    border: 1px solid #000;
+    padding: 1rem;
+}
+
+section {
+    margin: 0 auto;
+}
+/*
 .card {
     border-style: solid;
     border-width: 1px;
     border-color: rgb(145, 88, 13);
     box-shadow: 5px 5px 5px black;
-}
+}*/
 .card h2{
     text-align: center;
-    background-color: rgb(145, 88, 13);
+    background-color: rgb(184, 134, 11);
     margin-top: 0;
     padding: 5px;
 }
@@ -127,7 +149,6 @@ footer {
     text-align: center;
     grid-column: 1 / 3;
 
-    position: absolute;
     bottom: 0;
     width: 100%;
 }
